null values cleaned

--- a/model.ipynb
+++ b/model.ipynb
@@ -1467,7 +1467,13 @@
     }
    ],
    "source": [
-    "final_df.shape, embeddings.shape, X.shape, X_scaled.shape"
+    "# Check for NaN values in the scaled data\n",
+    "nan_mask = np.isnan(X_scaled)\n",
+    "rows_with_nan = nan_mask.any(axis=1)\n",
+    "\n",
+    "# Remove rows with NaN values in X and their corresponding values in y\n",
+    "X_scaled_cleaned = X_scaled[~rows_with_nan]\n",
+    "y_cleaned = y[~rows_with_nan]"
    ]
   },
   {
@@ -1490,72 +1496,7 @@
     }
    ],
    "source": [
-    "final_df['Target'].value_counts(normalize=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "116\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "[0 1]\n",
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(np.isnan(X_scaled).sum())\n",
-    "print(np.isinf(X_scaled).sum())\n",
-    "print(np.isnan(y).sum())\n",
-    "print(np.isinf(y).sum())\n",
-    "print(y.unique())\n",
-    "print(np.isnan(y).sum())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Columns with NaN values and their counts:\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'numpy.ndarray' object has no attribute 'columns'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[89], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m nan_counts \u001b[38;5;241m=\u001b[39m nan_mask\u001b[38;5;241m.\u001b[39msum(axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mColumns with NaN values and their counts:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m col, is_nan, count \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(\u001b[43mX\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m, nan_columns, nan_counts):\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m is_nan:\n\u001b[1;32m     10\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mColumn: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcol\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, NaN Count: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcount\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'columns'"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "# Assuming X is your DataFrame before scaling\n",
-    "# Check for NaN values in the scaled data\n",
-    "nan_mask = np.isnan(X_scaled)\n",
-    "nan_columns = nan_mask.any(axis=0)\n",
-    "nan_counts = nan_mask.sum(axis=0)\n",
-    "\n",
-    "print(\"Columns with NaN values and their counts:\")\n",
-    "for col, is_nan, count in zip(X.columns, nan_columns, nan_counts):\n",
-    "    if is_nan:\n",
-    "        print(f\"Column: {col}, NaN Count: {count}\")"
+    "y.value_counts(normalize=True)"
    ]
   },
   {
@@ -1606,12 +1547,8 @@
     }
    ],
    "source": [
-    "# Scale the data\n",
-    "scaler = StandardScaler()\n",
-    "X_scaled = scaler.fit_transform(X)\n",
-    "\n",
     "# Train-test split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size=0.2, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_scaled_cleaned, y_cleaned, test_size=0.2, random_state=42)\n",
     "\n",
     "# Build LSTM model\n",
     "model = tf.keras.Sequential([\n",
