--- a/News scrapping/indiatimes.ipynb
+++ b/News scrapping/indiatimes.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install selenium bs4 beautifulsoup4 pandas webdriver_manager\n"
+    "pip install selenium bs4 beautifulsoup4 pandas webdriver_manager"
    ]
   },
   {
@@ -222,7 +222,7 @@
     "    filename += \".csv\"\n",
     "\n",
     "    # Save the DataFrame to a CSV file\n",
-    "    save_path = os.path.join(\"datasets\", \"scrapped_articles\", filename)\n",
+    "    save_path = os.path.join(\"datasets\", \"scrapped_news_data\", filename)\n",
     "    df.to_csv(save_path, index=False)"
    ]
   },
